[gd_scene format=3 uid="uid://bi0g2rqwt2ukg"]

[ext_resource type="Script" uid="uid://okwir8fk4yfd" path="res://Scripts/death_screen.gd" id="1_65rhn"]

[node name="Control" type="Control" unique_id=742510644]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_65rhn")

[node name="ColorRect" type="ColorRect" parent="." unique_id=548195598]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(9.62615e-06, 0.80849487, 0.8116138, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=204650398]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -172.5
offset_right = 196.0
offset_bottom = 172.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer" unique_id=1999666730]
custom_minimum_size = Vector2(685.35, 365.29)
layout_mode = 2
theme_override_colors/default_color = Color(0.8567007, 0.58044404, 0.2151176, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 9
theme_override_constants/shadow_offset_x = 2
theme_override_font_sizes/normal_font_size = 64
text = "You have escaped

You got some slick moves there"

[node name="Play Again" type="Button" parent="VBoxContainer" unique_id=1849676375]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Play Again?"

[node name="Menu" type="Button" parent="VBoxContainer" unique_id=314664434]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Back to Menu"

[node name="Quit" type="Button" parent="VBoxContainer" unique_id=313349312]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Play Again" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
